--- a/csharp-console/RagConsole.csproj
+++ b/csharp-console/RagConsole.csproj
@@ -5,10 +5,21 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <!-- 建議加入這行，以確保原生 DLL 在單一檔案發佈時能運作 (如果不想用單一檔案可忽略) -->
+    <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Npgsql" Version="8.0.3" />
+    <PackageReference Include="PaddleOCRSharp" Version="6.0.2" />
+    <!-- 新增下面這個套件，確保包含 Windows x64 的原生 DLL -->
+    <!-- <PackageReference Include="PaddleOCRSharp.win-x64" Version="4.4.0.1" /> -->
+
+    <!-- 確保 images 資料夾內的檔案在建置和發布時都會被複製 -->
+    <Content Include="images\**">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
